--- a/home.html
+++ b/home.html
@@ -14,35 +14,9 @@
 			<div class="row">
 				<div class="col-xs-1"></div>
 				<div class="col-xs-10">	
-					<h1>Welcome</h1>
-					<span><a href="#" id="new_post">Add new post</a></span>
-					<div class="col-xs-10 new">
-						<form class="col-xs-12" autocomplete="off" name="addNewForm"> <!-- form begins here -->
-						<div class="form-group">
-							<label class="col-xs-2 margin-top" for="title">Title:</label>
-							<div class="col-xs-10 margin-top">
-								<input class="form-control" type="text" name="title" id="title" required >
-							</div>
-							<label class="col-xs-2 margin-top" for="author">Author Name:</label>
-							<div class="col-xs-10 margin-top">
-								<input class="form-control" type="text" name="author" id="author" required >
-							</div>
-							<label class="col-xs-2 margin-top " for="date">Date:</label>
-							<div class="col-xs-10 margin-top ">
-								<input class="form-control" type="text" name="date" id="date" required>
-							</div>
-							<label class="col-xs-2 margin-top " for="content">Content:</label>
-							<div class="col-xs-10 margin-top ">
-								<textarea rows="4" cols="50" id="content">
-
-								</textarea>
-							</div>
-
-							<button type="submit" class="btn  col-xs-3 margin-top add_btn">Add</button>
-							<!-- <button type="reset" class="btn  col-xs-offset-5 margin-top" >Cancel</button> -->
-						</div>
-					</form> <!-- form ends here -->
-					</div>
+					<h1 class="col-xs-9">Welcome</h1>
+					<a class="col-xs-1" href="\">Logout</a>
+					<a class="col-xs-2" href="addpost" id="new_post">Add new post</a>
 					<div  class="col-xs-10 post_list">	
 					</div>
 					
